--- a/catch-of-the-day/src/css/style.css
+++ b/catch-of-the-day/src/css/style.css
@@ -1,3 +1,48 @@
+.order-enter {
+  -webkit-transform: translateX(-120%);
+          transform: translateX(-120%);
+  transition: 0.5s;
+  max-height: 0;
+  padding: 0;
+}
+.order-enter.order-enter-active {
+  max-height: 60px;
+  padding: 2rem 0 !important;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+.order-exit {
+  transition: 0.5s;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+.order-exit.order-exit-active {
+  -webkit-transform: translateX(120%);
+          transform: translateX(120%);
+  padding: 0;
+}
+.count-enter {
+  transition: 5s;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+}
+.count-enter.count-enter-active {
+  background: #ff0;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+.count-exit {
+  transition: 5s;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.count-exit.count-exit-active {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
 @font-face {
   font-family: "haymakerregular";
   src: url("./fonts/haymaker-webfont.eot");
